--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               </a>
             </li>
 
-            <!-- RIFF FORGE -->
+            <!-- RIFF FORGE 
             <li>
               <a class="item" href="riff-forge.html">
                 <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
@@ -172,9 +172,10 @@
                 <span class="title" data-i18n="app_riff_title">The Riff Forge</span>
                 <span class="meta" data-i18n="app_riff_meta">Heavy riff generator — tunings, djent leaning grids, syncopation & instant MIDI.</span>
               </a>
-            </li>
+            </li>-->
+            
 
-            <!-- MODERN RIFF LIBRARY -->
+            <!-- MODERN RIFF LIBRARY 
             <li>
               <a class="item" href="modern-djent-riff-library.html">
                 <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
@@ -186,7 +187,7 @@
                 <span class="title">Modern Djent Riff Library</span>
                 <span class="meta">Loop view + audio playback of curated djent riffs.</span>
               </a>
-            </li>
+            </li>-->
 
           </ul>
         </div>
