--- a/index.html
+++ b/index.html
@@ -333,6 +333,20 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   </a>
 </li>
 
+        <!-- SCALES -->
+        <li>
+          <a class="item" href="the-notes-map.html">
+            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor">
+              <circle cx="5" cy="16" r="1.6"></circle>
+              <circle cx="9.5" cy="13.2" r="1.6"></circle>
+              <circle cx="14" cy="10.6" r="1.6"></circle>
+              <circle cx="18.5" cy="8" r="1.6"></circle>
+            </svg>
+            <span class="title">The notes map</span>
+            <span class="meta">Paths that guide the hand toward unseen colors.</span>
+          </a>
+        </li>
+
       </ul>
     </nav>
 
