--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -234,7 +234,117 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
       <div id="pianoContainer" style="width:100%; overflow:hidden;"></div>
     </section>
 
+<section class="panel" style="margin-top:24px;">
+  <summary style="cursor:pointer;">Extended Tunings & Bands</summary>
+  <div class="panel-body">
+
+    <h2 style="font-size:1.1rem; margin-top:0;">Extended Tunings</h2>
+    <div class="tuning" style="margin-bottom:20px;">
+
+      <!-- CARD: 8-string / F# tuning -->
+      <div class="string-card">
+        <strong>8-string — Standard F#</strong>
+        <div class="octv">F#-B-E-A-D-G-B-E</div>
+        <small class="piano-caption">Modern metal / djent foundation</small>
+      </div>
+
+      <!-- CARD: Drop E -->
+      <div class="string-card">
+        <strong>7-string — Drop E</strong>
+        <div class="octv">E-B-E-A-D-G-B</div>
+        <small class="piano-caption">Periphery / Invent Animate style</small>
+      </div>
+
+      <!-- CARD: Drop C -->
+      <div class="string-card">
+        <strong>6-string — Drop C</strong>
+        <div class="octv">C-G-C-F-A-D</div>
+        <small class="piano-caption">Architects / Crystal Lake / Loathe</small>
+      </div>
+
+      <!-- CARD: Drop B -->
+      <div class="string-card">
+        <strong>6-string — Drop B</strong>
+        <div class="octv">B-F#-B-E-G#-C#</div>
+        <small class="piano-caption">Northlane (pre-Node) / Currents</small>
+      </div>
+
+      <!-- CARD: G# (Meshuggah) -->
+      <div class="string-card">
+        <strong>8-string — Meshuggah G#</strong>
+        <div class="octv">G#-C#-F#-B-E-G#-C#-F#</div>
+        <small class="piano-caption">Polymetric modern extreme metal</small>
+      </div>
+
+      <!-- CARD: Open C Minor -->
+      <div class="string-card">
+        <strong>6-string — Open C Minor</strong>
+        <div class="octv">C-G-C-G-C-Eb</div>
+        <small class="piano-caption">Post-metal / ambient heavy tones</small>
+      </div>
+
+    </div>
+
+
+    <h2 style="font-size:1.1rem;">Bands by Style</h2>
+    <div class="tuning">
+
+      <!-- DJENT -->
+      <div class="string-card">
+        <strong>Djent / Progressive</strong>
+        <ul style="margin:8px 0 0; padding-left:1.1rem; font-size:13px;">
+          <li>Periphery</li>
+          <li>Tesseract</li>
+          <li>Animals as Leaders</li>
+          <li>Vildhjarta</li>
+          <li>Monuments</li>
+        </ul>
+      </div>
+
+      <!-- MODERN METALCORE -->
+      <div class="string-card">
+        <strong>Modern Metalcore</strong>
+        <ul style="margin:8px 0 0; padding-left:1.1rem; font-size:13px;">
+          <li>Loathe</li>
+          <li>Invent Animate</li>
+          <li>Currents</li>
+          <li>Alpha Wolf</li>
+          <li>Spiritbox</li>
+        </ul>
+      </div>
+
+      <!-- NU-METAL CONTEMPORÁNEO -->
+      <div class="string-card">
+        <strong>Contemporary Nu-Metal</strong>
+        <ul style="margin:8px 0 0; padding-left:1.1rem; font-size:13px;">
+          <li>Sleep Token</li>
+          <li>Bad Omens</li>
+          <li>Kardashev</li>
+          <li>Tallah</li>
+          <li>Make Them Suffer</li>
+        </ul>
+      </div>
+
+      <!-- BLACKENED / INDUSTRIAL -->
+      <div class="string-card">
+        <strong>Blackened / Industrial</strong>
+        <ul style="margin:8px 0 0; padding-left:1.1rem; font-size:13px;">
+          <li>Hexes <small>(tu banda)</small></li>
+          <li>VVilderness</li>
+          <li>Author & Punisher</li>
+          <li>The Algorithm</li>
+          <li>Code Orange</li>
+        </ul>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
     <p class="footer">Tip: use ± to shift each string by semitones. Everything is saved on this device (no backend).</p>
+
+
 
     <footer>
       <!-- Botón Buy Me a Coffee adaptado al tema (sin script externo) -->
